--- a/src/_includes/css/terminal.css
+++ b/src/_includes/css/terminal.css
@@ -1,4 +1,4 @@
-.terminal {
+.code {
   display: flex;
   justify-content: space-between;
 
